# perfume_shop

./: .gitignore  docker-compose.yml
admin/: Dockerfile  package-lock.json  package.json
admin/src/: App.vue  common.js  firebase.js  main.js  menuAside.js
admin/src/components/: AsideMenu.vue  AsideMenuItem.vue  CardBox.vue  CommonLoader.vue  CommonTable.vue  ConfirmDialog.vue  CouponModal.vue  FormCheckRadio.vue  PerfumeBranchModel.vue  PerfumeDetailModal.vue  PerfumeDetailModel.vue  PerfumeFragrantModal.vue  PerfumeList.vue  PerfumeListModal.vue  SaleFilter.vue  SectionTitleLineWithButton.vue  SinglePerfume.vue  TableSampleClients.vue
admin/src/layouts/: LayoutAuthenticated.vue
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/config/: database.py  setting.py
backend/core/: api.py
backend/core/endpoints/: Cart.py  Coupon.py  PerfumeBranch.py  PerfumeDetail.py  PerfumeFragnant.py  User.py  __init__.py  test.py
backend/migrations/: env.py  from20_06.sql
backend/migrations/versions/: 2024_03_25_1103_create_table_user.py  2024_04_01_1405_create_table_perfume_fragnant.py  2024_04_01_1424_create_table_perfume_detail.py  2024_04_01_1452_create_table_perfume_branch.py  2024_04_01_1453_create_table_perfume_detail.py  2024_04_21_1154_create_table_coupon.py
backend/models/: Base.py  Cart.py  Coupon.py  PerfumeBranch.py  PerfumeDetail.py  PerfumeFragnant.py  User.py  base.py
backend/schemas/: User.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.vue  common.js  main.js  store.js
(+23 files in other folders)
