[tool.poetry]
name = "perfume-shop-backend"
version = "0.1.0"
description = ""
authors = ["HoangMinhDuc <hoangminhduc4125@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
psycopg2-binary = "^2.9.9"
peewee = "^3.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
