[tool.poetry]
name = "perfume-shop-backend"
version = "0.1.0"
description = ""
authors = ["HoangMinhDuc <hoangminhduc4125@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
psycopg2-binary = "^2.9.9"
peewee = "^3.17.1"
blueprint = "^3.4.2"
configparser = "^6.0.1"
alembic = "^1.13.1"
bcrypt = "^4.1.2"
flask-bcrypt = "^1.0.1"
pydantic = "^2.6.4"
urllib3 = "^2.2.1"
flask-login = "^0.6.3"
flask-cors = "^4.0.0"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
